[package]
name = "ash_rt"
version = "0.1.0"
edition = "2021"
authors = ["范申"]

[dependencies]
winit = "0.20.0"
ash = { version = "0.37.0", features = ["linked"] }
num = "0.4.0"
memoffset = "0.7"
cgmath = "0.18.0"
image = "0.24.4"
tobj = "3.2.3"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.5", features = ["windef", "libloaderapi"] }
